# rust-startup

./: Cargo.toml  readme.md
05_thumbor/: Cargo.toml  abi.proto
05_thumbor/src/: main.rs
05_thumbor/src/pb/: mod.rs
chaos_test/: Cargo.toml  readme.md
chaos_test/src/: main.rs  utils.rs
chat_fake/: Cargo.toml
chat_fake/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello-rust/: Cargo.toml  readme.md
hello-rust/src/: main.rs  value_tour.rs
httpie/: Cargo.toml
httpie/src/: main.rs
kv/: Cargo.toml  readme.md
kv/examples/: client.rs  dummy_server.rs  server.rs
kv/src/: error.rs  lib.rs
kv/src/pb/: mod.rs
kv/src/service/: command_service.rs  mod.rs
kv/src/storage/: memory.rs  mod.rs
notes/: cargo.md  参考资料.md  要点.md
queryer/: Cargo.toml
queryer/examples/: covid.rs  dialect.rs
queryer/src/: dialect.rs
scrape_url/: Cargo.toml
scrape_url/src/: main.rs
training_code/: Cargo.toml
training_code/src/: fibonacci.rs  lib.rs  strtok.rs  ticket.rs  user.rs
variables/: Cargo.toml
variables/src/: main.rs  types.rs
